# tdx

./: CODEOWNERS  Cargo.toml  README.md
.github/: auto_assign-issues.yml  auto_assign.yml
src/: lib.rs
src/launch/: bindings.rs  linux.rs  mod.rs
src/launch/linux/: mod.rs
src/linux/: mod.rs
src/tdvf/: mod.rs
src/vcpu/: mod.rs
src/vm/: mod.rs
src/vm/linux/: ioctl.rs  mod.rs  types.rs
tests/: launch.rs
tests/data/: OVMF.inteltdx.fd
