[package]
name = "tdx"
version = "0.1.0"
authors = ["The VirTEE Project Developers <virtee-security@redhat.com>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://github.com/virtee/tdx"
repository = "https://github.com/virtee/tdx"
description = "Library for Intel TDX"
readme = "README.md"
keywords = ["intel", "sgx", "tdx"]
categories = ["os", "os::linux-apis", "hardware-support"]
rust-version = "1.71"

[dependencies]
bitflags = "2.4.2"
kvm-bindings = { git = "https://github.com/virtee/kvm-bindings.git", branch = "main", features = ["fam-wrappers"] }
kvm-ioctls = { git = "https://github.com/virtee/kvm-ioctls.git", branch = "main" }
libc = "0.2.155"
uuid = "1.8.0"
vmm-sys-util = "0.12.1"
